feat: 生成新的 docs 文件
